--- a/package.json
+++ b/package.json
@@ -15,11 +15,20 @@
     "@angular/common": "~8.2.14",
     "@angular/compiler": "~8.2.14",
     "@angular/core": "~8.2.14",
+    "@angular/fire": "^5.4.2",
     "@angular/forms": "~8.2.14",
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
+    "angular-bootstrap-md": "^8.10.0",
+    "angularfire2": "^5.4.2",
+    "bootstrap": "^4.4.1",
+    "firebase": "^7.9.1",
+    "install": "^0.13.0",
+    "mdbootstrap": "^4.13.0",
+    "npm": "^6.13.7",
     "rxjs": "~6.4.0",
+    "sweetalert2": "^9.7.2",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
