--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "@angular/platform-browser": "~8.2.14",
         "@angular/platform-browser-dynamic": "~8.2.14",
         "@angular/router": "~8.2.14",
+        "@ngrx/store": "^9.1.0",
         "angular-bootstrap-md": "^8.10.0",
         "angularfire2": "^5.4.2",
         "bootstrap": "^4.4.1",
