--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~9.1.13",
+    "@angular/cdk": "^9.2.4",
     "@angular/common": "~9.1.13",
     "@angular/compiler": "~9.1.13",
     "@angular/core": "~9.1.13",
@@ -22,9 +23,9 @@
     "@angular/router": "~9.1.13",
     "@ngrx/store": "^9.1.2",
     "@ngrx/store-devtools": "^9.1.2",
-    "angular-bootstrap-md": "^8.10.0",
+    "angular-bootstrap-md": "^8.10.1",
     "angularfire2": "^5.4.2",
-    "bootstrap": "^4.4.1",
+    "bootstrap": "^5.0.0-beta3",
     "core-js": "^3.6.4",
     "firebase": "^7.9.1",
     "install": "^0.13.0",
